--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,13 +21,53 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="retro backgruond03" translatesAutoresizingMaskIntoConstraints="NO" id="qsy-ox-LZV">
                                 <rect key="frame" x="-179" y="-12" width="678" height="772"/>
                             </imageView>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="TAPPER" translatesAutoresizingMaskIntoConstraints="NO" id="Jp1-cG-a90">
+                                <rect key="frame" x="40" y="36" width="240" height="63"/>
+                            </imageView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkz-R1-cPS">
+                                <rect key="frame" x="69" y="385" width="192" height="138"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="192" id="SI8-qe-o4Q"/>
+                                    <constraint firstAttribute="height" constant="138" id="UDZ-3O-3nk"/>
+                                </constraints>
+                                <state key="normal" image="path1426"/>
+                            </button>
+                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hkm-AB-a0W">
+                                <rect key="frame" x="58" y="359" width="203" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="FTx-Zv-XLO"/>
+                                    <constraint firstAttribute="width" constant="203" id="IDw-qI-g5g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRR-er-xsW">
+                                <rect key="frame" x="90" y="49" width="138" height="138"/>
+                                <state key="normal" image="image3355"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100 Taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEC-HF-vXi">
+                                <rect key="frame" x="25" y="223" width="269" height="50"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="35"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Jp1-cG-a90" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="0fX-B6-aQb"/>
+                            <constraint firstItem="Jp1-cG-a90" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2zK-WM-oGW"/>
+                            <constraint firstItem="xkz-R1-cPS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9Hp-y0-W4A"/>
+                            <constraint firstItem="pRR-er-xsW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FCw-7S-9WQ"/>
                             <constraint firstAttribute="trailing" secondItem="qsy-ox-LZV" secondAttribute="trailing" id="GVA-r7-DSX"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hkm-AB-a0W" secondAttribute="bottom" constant="179" id="NF8-3C-yy7"/>
                             <constraint firstItem="qsy-ox-LZV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="XeA-Z5-ACo"/>
+                            <constraint firstItem="pRR-er-xsW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="29" id="aVC-nn-kQ8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Jp1-cG-a90" secondAttribute="trailing" constant="20" id="k27-7J-xYO"/>
+                            <constraint firstItem="Jp1-cG-a90" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="m8V-8B-j1p"/>
                             <constraint firstItem="qsy-ox-LZV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="t6I-nK-hLJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xkz-R1-cPS" secondAttribute="bottom" constant="45" id="wwB-Hd-vhH"/>
                             <constraint firstAttribute="bottom" secondItem="qsy-ox-LZV" secondAttribute="bottom" id="x4O-rC-PDN"/>
+                            <constraint firstItem="xkz-R1-cPS" firstAttribute="centerX" secondItem="hkm-AB-a0W" secondAttribute="centerX" id="yBF-ue-4YV"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
@@ -37,6 +78,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="TAPPER" width="411" height="100"/>
+        <image name="image3355" width="138" height="138"/>
+        <image name="path1426" width="189" height="93"/>
         <image name="retro backgruond03" width="1667" height="1667"/>
     </resources>
 </document>
