--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -18,13 +18,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="retro backgruond03" translatesAutoresizingMaskIntoConstraints="NO" id="qsy-ox-LZV">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="retro backgruond03" translatesAutoresizingMaskIntoConstraints="NO" id="qsy-ox-LZV" userLabel="retroBG">
                                 <rect key="frame" x="-179" y="-12" width="678" height="772"/>
                             </imageView>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="TAPPER" translatesAutoresizingMaskIntoConstraints="NO" id="Jp1-cG-a90">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="TAPPER" translatesAutoresizingMaskIntoConstraints="NO" id="Jp1-cG-a90">
                                 <rect key="frame" x="40" y="36" width="240" height="63"/>
                             </imageView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkz-R1-cPS">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkz-R1-cPS" userLabel="PlayButton">
                                 <rect key="frame" x="69" y="385" width="192" height="138"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="192" id="SI8-qe-o4Q"/>
@@ -32,7 +32,7 @@
                                 </constraints>
                                 <state key="normal" image="path1426"/>
                             </button>
-                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hkm-AB-a0W">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hkm-AB-a0W" userLabel="TapTF">
                                 <rect key="frame" x="58" y="359" width="203" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="FTx-Zv-XLO"/>
@@ -41,14 +41,14 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRR-er-xsW">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRR-er-xsW" userLabel="TapButton">
                                 <rect key="frame" x="90" y="49" width="138" height="138"/>
                                 <state key="normal" image="image3355"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100 Taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEC-HF-vXi">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="100 Taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEC-HF-vXi" userLabel="tapTxt">
                                 <rect key="frame" x="25" y="223" width="269" height="50"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="35"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -62,6 +62,8 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hkm-AB-a0W" secondAttribute="bottom" constant="179" id="NF8-3C-yy7"/>
                             <constraint firstItem="qsy-ox-LZV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="XeA-Z5-ACo"/>
                             <constraint firstItem="pRR-er-xsW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="29" id="aVC-nn-kQ8"/>
+                            <constraint firstItem="FEC-HF-vXi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="c5r-KK-kQY"/>
+                            <constraint firstItem="FEC-HF-vXi" firstAttribute="top" secondItem="pRR-er-xsW" secondAttribute="bottom" constant="36" id="eBF-Go-8N1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Jp1-cG-a90" secondAttribute="trailing" constant="20" id="k27-7J-xYO"/>
                             <constraint firstItem="Jp1-cG-a90" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="m8V-8B-j1p"/>
                             <constraint firstItem="qsy-ox-LZV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="t6I-nK-hLJ"/>
@@ -71,6 +73,13 @@
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="howManyTapsTF" destination="hkm-AB-a0W" id="lB2-8q-XTC"/>
+                        <outlet property="logoImg" destination="Jp1-cG-a90" id="owQ-Hb-nPP"/>
+                        <outlet property="playBtn" destination="xkz-R1-cPS" id="sMm-uQ-KJX"/>
+                        <outlet property="tabLbl" destination="FEC-HF-vXi" id="qoJ-HU-pxb"/>
+                        <outlet property="tapBtn" destination="pRR-er-xsW" id="7os-0k-apz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
