--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -47,6 +47,9 @@
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRR-er-xsW" userLabel="TapButton">
                                 <rect key="frame" x="90" y="49" width="138" height="138"/>
                                 <state key="normal" image="image3355"/>
+                                <connections>
+                                    <action selector="onCoinTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fh1-1U-fsC"/>
+                                </connections>
                             </button>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="100 Taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEC-HF-vXi" userLabel="tapTxt">
                                 <rect key="frame" x="25" y="223" width="269" height="50"/>
